Mongo connection, added models
