# server.js
@@ -7,7 +7,7 @@ const usersRoutes = require("./routes/users");
 const pizzasRoutes = require("./routes/pizzas");
 const drinksRoutes = require("./routes/drinks");
 const accompanimentsRoutes = require("./routes/accompaniments");
-const desertsRoutes = require("./routes/deserts");
+const dessertsRoutes = require("./routes/desserts");
 const ingredientsRoutes = require("./routes/ingredients");
 const homePizzasRoutes = require("./routes/homePizzas");
 const homeCombosRoutes = require("./routes/homeCombos");
@@ -24,7 +24,7 @@ server.use("/users", usersRoutes);
 server.use("/pizzas", pizzasRoutes);
 server.use("/drinks", drinksRoutes);
 server.use("/accompaniments", accompanimentsRoutes);
-server.use("/deserts", desertsRoutes);
+server.use("/desserts", dessertsRoutes);
 server.use("/ingredients", ingredientsRoutes);
 server.use("/homePizzas", homePizzasRoutes);
 server.use("/homeCombos", homeCombosRoutes);
